fixed coupon filter on mobile

--- a/PredictionUI/Views/Client/Layout/css/style.css
+++ b/PredictionUI/Views/Client/Layout/css/style.css
@@ -846,6 +846,17 @@ option , select{
         width: auto!important;
     }
 
+    /*.select2-close-mask{*/
+    /*    z-index: 2099;*/
+    /*}*/
+    /*.select2-dropdown{*/
+    /*    z-index: 3051;*/
+    /*}*/
+
+    .select2-container {
+        z-index: 99999!important;
+    }
+
 }
 
 @media (min-width: 768px) {
